# nova-agent

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  build_third_party.sh  config.json  iwyu.imp  main.cc  setup_env.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
app/include/: loader.h  runner.h  version.h
app/include/api/: call_data.h
app/include/common/: base_thread.h  const.h  file.h  hex.h  lrucache.h  machine.h  parser.h  util.h
app/include/common/grpc/: grpc_client_options.h
app/include/common/kubernetes/: endpoint.h  name_control.h  pod.h  service.h
app/include/common/opentelemetry/: const.h  export_trace_service_call_data.h  otlp_environment.h  otlp_event_data.h  otlp_grpc_client.h  otlp_grpc_client_options.h  otlp_metric_resource.h  otlp_metric_utils.h  otlp_populate_attribute_utils.h  otlp_recordable_utils.h  recordable.h  util.h
app/include/config/: nova_agent_config.h  trace_agent_config.h
app/include/intercept/: chain.h
app/include/intercept/opentelemetry/log/skywalking/: processor.h
app/include/intercept/opentelemetry/metric/skywalking/: processor.h  sky_metric_data.h  sky_metric_resource.h
app/include/intercept/opentelemetry/trace/skywalking/: const.h  processor.h  skyrecordable.h  skyresource.h  skywalkingproto_to_traces_util.h
app/include/intercept/opentelemetry/trace/topology/: common.h  endpoint_dep_from_cross_thread_analysis_listener.h  endpoint_dependency_builder.h  endpoint_source_builder.h  listener.h  listener_manager.h  network_address_alias_mapping_listener.h  processor.h  rpc_analysis_listener.h  rpc_traffic_source_builder.h  segment_analysis_listener.h  service_metric_aggregator.h  service_relation_metric_aggregator.h  virtual_cache_processor.h  virtual_database_processor.h  virtual_mq_processor.h  virtual_service_analysis_listener.h
app/include/prometheus/: prometheus_exposer.h
app/include/sink/: manager.h
app/include/sink/channel/: batch.h  grpc_channel.h
app/include/sink/deep_observe/node/: call_data.h  client.h  sink.h
app/include/sink/opentelemetry/log/grpc/: sink.h
app/include/sink/opentelemetry/metric/grpc/: sink.h
app/include/sink/opentelemetry/trace/grpc/: sink.h
app/include/sink/pipeline/: pipeline.h
app/include/sink/topology/: sink.h
app/include/source/host/: source.h
app/include/source/host/collector/: const.h
app/include/source/host/collector/api/: collector.h
app/include/source/host/collector/cgroup/: cgroup_collector.h
app/include/source/host/collector/container/: container_collector.h  container_info.h  docker_cri_client.h  docker_http_client.h
app/include/source/host/collector/cpu/: collector.h  const.h  cpu_feature.h  cpu_topology.h  cpu_usage.h  cpuinfo.h
app/include/source/http/: health_check.h  source.h
app/include/source/kubernetes/: const.h  dispatcher.h  endpoint_dispatcher.h  pods_dispatcher.h  service_dispatcher.h  service_watcher.h  source.h  watcher.h
app/include/source/skywalking/grpc/: configuration_server_call_data.h  jvm_metric_server_call_data.h  jvm_metric_server_event_data.h  logging_server_call_data.h  logging_server_event_data.h  management_server_call_data.h  meter_server_call_data.h  source.h  trace_segment_server_call_data.h  trace_segment_server_event_data.h
app/source/: CMakeLists.txt  runner.cc
app/source/common/: CMakeLists.txt  file.cc  util.cc
app/source/common/grpc/: grpc_client_options.cc
app/source/common/kubernetes/: endpoint.cc  name_control.cc  pod.cc  service.cc
app/source/common/opentelemetry/: otlp_environment.cc  otlp_grpc_client.cc  otlp_metric_utils.cc  otlp_populate_attribute_utils.cc  otlp_recordable_utils.cc  recordable.cc
app/source/config/: trace_agent_config.cc
app/source/intercept/: CMakeLists.txt  chain.cc
app/source/intercept/opentelemetry/log/: processor.cc
app/source/prometheus/: prometheus_exposer.cc
app/source/sink/: CMakeLists.txt
app/source/sink/channel/: grpc_channel.cc
app/source/sink/deep_observe/node/: client.cc  sink.cc
app/source/sink/pipeline/: pipeline.cc
app/source/sink/topology/: sink.cc
app/source/source/: CMakeLists.txt
app/source/source/host/: CMakeLists.txt  source.cc
app/source/source/http/: health_check.cc  source.cc
app/source/source/kubernetes/: endpoint_dispatcher.cc  pods_dispatcher.cc  service_dispatcher.cc  service_watcher.cc  source.cc  watcher.cc
app/source/source/skywalking/grpc/: configuration_server_call_data.cc  jvm_metric_server_call_data.cc  logging_server_call_data.cc  source.cc  trace_segment_server_call_data.cc
cmake/: abseil-cpp.cmake  config.cmake  cri-api.cmake  deep-agent-payload-protocol.cmake  nova-agent-payload-protocol.cmake  opentelemetry-proto.cmake  skywalking-data-collect-protocol.cmake  trace-agent-config.cmake
config/: runner.json
doc/: grpc.md
docker/centos/: Dockerfile
docker/compile/: build_image.sh
docker/compile/incremental/: Dockerfile
docker/compile/ubuntu-22.04/: Dockerfile
docker/compile/ubuntu-24.04/: Dockerfile
docker/deploy/: .gitignore  Dockerfile  start.sh
kubernetes/: deployment.yaml
proto/: CMakeLists.txt  nova_agent_config.proto  runner_config.proto  trace_agent_config.proto
proto/common/: common.proto
proto/cri-api/: README.md  api.proto
proto/intercept/opentelemetry/: opentelemetry.proto
proto/intercept/opentelemetry/log/skywalking/: config.proto
proto/intercept/opentelemetry/metric/skywalking/: config.proto
proto/intercept/opentelemetry/trace/skywalking/: config.proto
proto/sink/opentelemetry/: opentelemetry.proto
proto/sink/opentelemetry/log/grpc/: config.proto
proto/sink/opentelemetry/metric/grpc/: config.proto
proto/sink/opentelemetry/trace/grpc/: config.proto
proto/source/skywalking/: skywalking.proto
proto/source/skywalking/grpc/: config.proto
scripts/: format-cmake.sh
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  file_test.cc  parser_test.cc
tests/proc_reader/: CMakeLists.txt  gpu.cc  oltp_reporter.cc  proc_reader_test.cc  psutils.py
(+79 files in other folders)
